Update une scene nationale.html
img aff

--- a/site théâtre/une scene nationale.html
+++ b/site théâtre/une scene nationale.html
@@ -19,7 +19,7 @@
       <p>Il y a un total de 77 scènes nationales réparties
         dans toute la France.</p>
 
-      <img src="IMG/scènes nationales loc.png">
+      <img src="IMG/scénes nationales loc.png">
 
       <p>Le Bateau Feu est une scène nationale depuis
         sa troisième saison en 1992. On peut y jouer
